--- a/static/desktop/upsell-1.html
+++ b/static/desktop/upsell-1.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+	<!-- Offer Conversion: American Science CBD SS Direct -->
+<iframe src="https://trk.starlightgroup.io/aff_l?offer_id=1" scrolling="no" frameborder="0" width="1" height="1"></iframe>
+<!-- // End Offer Conversion -->
 <div class="container">
 	<div class="contentWrap shadow">
     	<div class="header position">
