enabled info text for all clients

--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,7 @@
         <span>Enriched With Hemp Extract</span>
         <img src="assets/images/bnr-img-btm.png" alt="" class="bnr-img-btm" />
         <img src="assets/images/bnr-prd.png" alt="" class="bnr-prd for-mob" />
-        <p class="comn-txt for-desk for-tab">American Science supplements are infused with hemp extract that is enriched with over 80 cannabinoids that offer a wide range of therapeutic health benefits. </p>
+        <p class="comn-txt">American Science supplements are infused with hemp extract that is enriched with over 80 cannabinoids that offer a wide range of therapeutic health benefits. </p>
         <a href="hemp-oil.html"><img src="assets/images/btn.png" alt="" class="bnr-btn" /></a>
       </div>
       <div class="bnr-rgt for-desk for-tab">
