--- a/static/mobile/thankyou.html
+++ b/static/mobile/thankyou.html
@@ -21,7 +21,9 @@
 <body>
 <div class="contentWrap">
     <div class="header position">
-        <img src="images/logo.png" alt="" class="logo" />
+        <a href="/">
+            <img src="images/logo.png" alt="" class="logo" />
+        </a>
     </div>
     <div class="thank-mid">
     	<p class="thank-txt1">Congratulations! </p>
