--- a/static/mobile/upsell-2.html
+++ b/static/mobile/upsell-2.html
@@ -11,7 +11,9 @@
 <body>
 <div class="contentWrap">
     <div class="header position">
-        <img src="images/logo.png" alt="" class="logo" />
+        <a href="/">
+            <img src="images/logo.png" alt="" class="logo" />
+        </a>
     </div>
     <div class="redbar">
         <p>Wait before you go!<br />
