--- a/static/product-2.html
+++ b/static/product-2.html
@@ -18,7 +18,9 @@
 <body>
   <div class="top-sec">
     <div class="container">
-      <img src="images/logo.png" alt="" class="logo">
+      <a href="/">
+        <img src="images/logo.png" alt="" class="logo">
+      </a>
       <div class="light-menu for-mob">
         <a href="javascript:void(0)" class="smobitrigger mob-mnu"> <img src="images/mob-menu-btn.png"> </a>
         <ul class="mobimenu">
