--- a/static/promo/mobile/thankyou.html
+++ b/static/promo/mobile/thankyou.html
@@ -39,7 +39,7 @@
 
 <body>
   <div id="container">
-    <div class="spng-hd" style="height:98px;"> <img src="images/logo.png" alt="" class="logo" />
+    <div class="spng-hd" style="height:98px;"> <a href="/"><img src="images/logo.png" alt="" class="logo" /></a>
       <p class="clearall"></p>
       <div class="thnk-bg">
         <p class="thnk-p1">THANK YOU FOR YOUR PURCHASE</p>
