--- a/static/promo/mobile/upsell-1.html
+++ b/static/promo/mobile/upsell-1.html
@@ -30,7 +30,7 @@
   <!-- Offer Conversion: American Science CBD Straight Sale -->
   <iframe src="https://starlightgroup.go2cloud.org/aff_l?offer_id=1" scrolling="no" frameborder="0" width="1" height="1"></iframe>
   <!-- // End Offer Conversion -->
-  <div id="container"> <img src="images/logo.png" alt="" class="logo" />
+  <div id="container"> <a href="/"><img src="images/logo.png" alt="" class="logo" /></a>
     <div class="up-strip">
       <p class="strip-txt1"> YOU QUALIFY FOR A LIMITED TIME DISCOUNT. </p>
       <p class="strip-txt2">Get the <b>Extra Strength Hemp Capsules</b> at
