--- a/static/desktop/upsell-3.html
+++ b/static/desktop/upsell-3.html
@@ -10,7 +10,9 @@
 <div class="container">
 	<div class="contentWrap shadow">
     	<div class="header position">
-        	<img src="images/logo.png" alt="" class="logo" />
+            <a href="/">
+        	   <img src="images/logo.png" alt="" class="logo" />
+            </a>
             <img src="images/step.png" alt="" class="step" />
             <img src="images/seals.png" alt="" class="seals" />
         </div>
