--- a/static/promo/mobile/upsell-2.html
+++ b/static/promo/mobile/upsell-2.html
@@ -27,7 +27,7 @@
   </script>
 </head>
 <body>
-  <div id="container"> <img src="images/logo.png" alt="" class="logo" />
+  <div id="container"> <a href="/"><img src="images/logo.png" alt="" class="logo" /></a>
     <div class="up-strip">
       <p class="strip-txt1"> YOU QUALIFY FOR A LIMITED TIME DISCOUNT.</p>
       <p class="strip-txt2">Complete Your Supplement Stack With
