removed inline styles

--- a/static/promo/desktop/index.html
+++ b/static/promo/desktop/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-  <h1 style="display:none">American cience CBD</h1>
+  <h1 class="display-none">American cience CBD</h1>
   <div class="topbar">
     <div class="container">
       <p class="topbartxt"><span>WARNING:</span> Due to extremely high media demand, there is limited supply of <span>Hemp Oil</span> in stock as of <span><script type="text/javascript">getDate(0);</script></span>
@@ -54,7 +54,7 @@
   </div>
   <!-- sec1 -->
   <div class="section1 dsplay">
-    <h2 style="display:none">American cience CBD</h2>
+    <h2 class="display-none">American cience CBD</h2>
     <div class="container">
       <div class="s1lft position">
         <i class="logo sprite2 sprite-logo"></i>
@@ -323,8 +323,8 @@
       <i class="s5-line sprite4 sprite-s5-line"></i>
       <div class="s5left">
         <div class="vedio">
-          <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-            <div class="wistia_embed wistia_async_5xe74yifg5 seo=false videoFoam=true" style="height:100%;width:100%"> </div>
+          <div class="wistia_responsive_wrapper">
+            <div class="wistia_embed wistia_async_5xe74yifg5 seo=false videoFoam=true"> </div>
           </div>
         </div>
         <!--<p class="s5-txt2 bdfont">"CBD (Hemp Extract) is emerging as one of the most powerful alternatives to prescription drugs. I am not backing down on CBD, I am doubling down on it."</p>-->
@@ -421,7 +421,7 @@
     </div>
   </div>
   <!-- footer -->
-  <div style="clear:both;"></div>
+  <div class="clear-both"></div>
   <div class="footer">
     <div class="container">
       <p class="ftr-txt"> <a href="#" class="popup-link" data-html="terms-and-conditions">Terms and Conditions </a>&nbsp;|&nbsp; <a href="#" class="popup-link" data-html="privacy-policy">Privacy Policy</a>&nbsp;|&nbsp; <a href="#" class="popup-link" data-html="customer-care"> Customer Care </a>
@@ -474,7 +474,7 @@
               </svg>
             </span>
           </button>
-          <h3 class="modal-title" style="display:none">American Science CBD</h3>
+          <h3 class="modal-title display-none">American Science CBD</h3>
         </div>
         <div class="modal-body">
         </div>
