changes hemp plant -> cannabis leaf

--- a/static/cbd333/index.html
+++ b/static/cbd333/index.html
@@ -375,7 +375,7 @@ $(document).ready(function(){
         <div class="row jacobson-text">
         	<div class="col-md-3"><img src="/assets/images/dr-jacobson.jpg" class="img-fluid"></div>
             <div class="col-md-9">
-            <p>The Cannabidiol used in American Science CBD Oil is 100% natural, sourced from real Hemp plants grown in the United States. This means that the quantity and concentration of CBD is standardized in every bottle, so you always know exactly what you’re getting. This is in stark contrast to other CBD products on the market, which come from questionable sources--and where you don’t even know if the product you’re buying contains real CBD.</p>
+            <p>The Cannabidiol used in American Science CBD Oil is 100% natural, sourced from real Cannabis leaves grown in the United States. This means that the quantity and concentration of CBD is standardized in every bottle, so you always know exactly what you’re getting. This is in stark contrast to other CBD products on the market, which come from questionable sources--and where you don’t even know if the product you’re buying contains real CBD.</p>
             </div>
             <div class="col-md-12">
             <p>The quality of our CBD oil is so high that it has earned the approval of Dr. Jacobson, a medical doctor specializing in Homeopathic medicine. Citing its high purity and quality control, Jacobson has called it “one of the best anti-aging remedies I’ve ever seen.”</p>
