--- a/static/faq.html
+++ b/static/faq.html
@@ -89,7 +89,7 @@
       <div class="acdn-bg">
         <div class="accordion"> What is the Legal status of CBD?</div>
         <div class="acdn-content">
-          <p class="txt1">The CBD in our products comes from industrial hemp that is legal in all 50 states. CBD is a natural component of the hemp plant and is therefore legal to be used as a food supplement.</p>
+          <p class="txt1">The CBD in our products comes from industrial hemp that is legal in all 50 states. CBD is a natural component of the cannabis leaf and is therefore legal to be used as a food supplement.</p>
         </div>
       </div>
       <div class="acdn-bg">
