--- a/static/promo/desktop/checkout.html
+++ b/static/promo/desktop/checkout.html
@@ -324,7 +324,7 @@
           <div class="moneyback-box"> <img src="images/moneyback.jpg" alt="" class="moneyback-seal" />
             <!--<p class="moneyback-hding1">90 Day Money-back Guarantee</p> -->
             <p class="moneyback-txt1">100% Money Back Guarantee </p>
-            <p class="moneyback-txt">Your purchase is insured by our 90 Day Money Back Guarantee, which ensures that if you are completely satisfied with the results, we will refund your money, no questions asked. </p>
+            <p class="moneyback-txt">Your purchase is insured by our 90 Day Money Back Guarantee, which ensures that if you are not completely satisfied with the results, we will refund your money, no questions asked. </p>
           </div> <img src="images/shop.png" alt="" class="shop" /> </div>
       </div>
     </div>
