rename american science to yeah keto

--- a/static/cart.html
+++ b/static/cart.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>American Science CBD</title>
+  <title>Yeah Keto</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
@@ -576,7 +576,7 @@
           <script type="text/javascript">
           var year = new Date();
           document.write(year.getFullYear());
-          </script> © All Rights Reserved - American Science CBD LTD
+          </script> © All Rights Reserved - Yeah Keto LTD
         </p>
     </div>
 </div>
