--- a/static/cbd333/upsell-3.html
+++ b/static/cbd333/upsell-3.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
 <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>American Science CBD Hemp Oil</title>
+<title>Yeah Keto Hemp Oil</title>
 <!-- libs -->
 <link rel="stylesheet" type="text/css" href="/assets/fonts/font-awesome.min.css"  />
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
@@ -300,7 +300,7 @@ in their infancy. </p>
               <div class="row">
                 <div class="col-md-5">
                  <div class="fs_12">
-                  <p>© 2018 All Rights Reserved - American Science CBD</p>
+                  <p>© 2018 All Rights Reserved - Yeah Keto</p>
                   </div>
                 </div>
                 <div class="col-md-7">
@@ -313,8 +313,8 @@ in their infancy. </p>
                 <div class="col-md-12">
                 <p class="ftr-txt fs_12">
                 <br>
-                <br> American Science CBD LTD
-                <br> * These statements have not been evaluated by the FDA. If you are pregnant, nursing, taking medications, or have a medical condition, consult your physician before using this product. Representations regarding the efficacy and safety of American Science CBD & American Science Nootripic Complex have not been evaluated by the Food and Drug Administration. The FDA only evaluates foods and drugs, not supplements like these products. These products are not intended to diagnose, prevent, treat, or cure any disease. <a href="https://www.ncbi.nlm.nih.gov/pubmed/18728714" target="_blank" class='legal-wiki-click'>CLICK HERE</a> to find evidence of a test, analysis, research, or study describing the benefits, performance or efficacy of American Science CBD  & American Science Nootripic Complex based on the expertise of relevant professionals.
+                <br> Yeah Keto LTD
+                <br> * These statements have not been evaluated by the FDA. If you are pregnant, nursing, taking medications, or have a medical condition, consult your physician before using this product. Representations regarding the efficacy and safety of Yeah Keto & American Science Nootripic Complex have not been evaluated by the Food and Drug Administration. The FDA only evaluates foods and drugs, not supplements like these products. These products are not intended to diagnose, prevent, treat, or cure any disease. <a href="https://www.ncbi.nlm.nih.gov/pubmed/18728714" target="_blank" class='legal-wiki-click'>CLICK HERE</a> to find evidence of a test, analysis, research, or study describing the benefits, performance or efficacy of Yeah Keto  & American Science Nootripic Complex based on the expertise of relevant professionals.
                 <br></p>
             </div>
       </div>
