--- a/static/contact.html
+++ b/static/contact.html
@@ -52,11 +52,11 @@
         <p class="comn-txt">You can reach out to us via email or give us a call. Information about our location and business hours is provided below. </p>
       <ul class="cont-list">
        <li>
-         <span>American Science CBD LTD</span>
+         <span>Yeah Keto LTD</span>
           <p>Corporate: 1A Erskine Street, Newry, Co. Down.
 Nothern Ireland, BT35 6BX</p>
 
-	        <span class="mtop1">American Science CBD</span>
+	        <span class="mtop1">Yeah Keto</span>
 	        <p>Corporate: 835 Woodbine Road, Highland Park, Illinois, 60035</p>
           <p class="mtop1">Returns: PO Box 9005, Seal Beach, CA 90740-9005</p>
 
@@ -133,7 +133,7 @@ Nothern Ireland, BT35 6BX</p>
           <script type="text/javascript">
           var year = new Date();
           document.write(year.getFullYear());
-          </script> © All Rights Reserved - American Science CBD LTD
+          </script> © All Rights Reserved - Yeah Keto LTD
         </p>
     </div>
 </div>
