--- a/static/desktop/upsell-1.html
+++ b/static/desktop/upsell-1.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<!-- Offer Conversion: American Science CBD SS Direct -->
+	<!-- Offer Conversion: Yeah Keto SS Direct -->
 <iframe src="https://trk.starlightgroup.io/aff_l?offer_id=1" scrolling="no" frameborder="0" width="1" height="1"></iframe>
 <!-- // End Offer Conversion -->
 <div class="container">
@@ -25,7 +25,7 @@
 We have an important message regarding continuing supply.</p>
         </div>
         <div class="sec1 dsplay">
-        	<p class="s1txt1">Recent media buzz about the incredible results people are achieving with our CBD Oil has created huge demand, and our stock is rapidly dwindling. Read below why this is happening. In the meantime, assure yourself of an adequate supply to truly experience all the benefits of <span>American Science CBD Oil.</span></p>
+        	<p class="s1txt1">Recent media buzz about the incredible results people are achieving with our CBD Oil has created huge demand, and our stock is rapidly dwindling. Read below why this is happening. In the meantime, assure yourself of an adequate supply to truly experience all the benefits of <span>Yeah Keto Oil.</span></p>
            <div class="clearall"></div>
             <div class="s1-doteed-sec">
                 <div class="s1-dot-left">
