--- a/static/hemp-oil.html
+++ b/static/hemp-oil.html
@@ -207,7 +207,7 @@
         var year = new Date();
         document.write(year.getFullYear());
       </script>
-                             © All Rights Reserved - American Science CBD LTD
+                             © All Rights Reserved - Yeah Keto LTD
     </p>
   </div>
 </div>
