--- a/static/index.html
+++ b/static/index.html
@@ -159,7 +159,7 @@
           <script type="text/javascript">
           var year = new Date();
           document.write(year.getFullYear());
-          </script> © All Rights Reserved - American Science CBD LTD
+          </script> © All Rights Reserved - Yeah Keto LTD
         </p>
     </div>
 </div>
