--- a/static/mobile/upsell-1.html
+++ b/static/mobile/upsell-1.html
@@ -20,7 +20,7 @@
 We have an important message regarding continuing supply.</p>
     </div>
     <div class="sec1">
-        <p class="s1txt1">Recent media buzz about the incredible results people are achieving with our CBD Oil has created huge demand, and our stock is rapidly dwindling. Read below why this is happening. In the meantime, assure yourself of an adequate supply to truly experience all the benefits of <b>American Science CBD Oil.</b></p>
+        <p class="s1txt1">Recent media buzz about the incredible results people are achieving with our CBD Oil has created huge demand, and our stock is rapidly dwindling. Read below why this is happening. In the meantime, assure yourself of an adequate supply to truly experience all the benefits of <b>Yeah Keto Oil.</b></p>
     	<div class="s1-doteed-sec">
             <p class="dot-rgt-txt1">Purchase 6 additional bottles of our CBD Oil at an astounding  </p>
             <center><img src="images/up-btl1.png" class="up-btl1"></center>
