--- a/static/promo/common/popup-contents/customer-care.html
+++ b/static/promo/common/popup-contents/customer-care.html
@@ -53,8 +53,8 @@
 <p class="normal">&nbsp;</p>
 
 <p class="list">
-  American Science CBD<br/>
-  Corporate: American Science CBD LTD<br/>
+  Yeah Keto<br/>
+  Corporate: Yeah Keto LTD<br/>
   Returns: PO Box 9005, Seal Beach, CA 90740-9005
 </p>
 <p class="normal">&nbsp;</p>
