--- a/static/promo/common/popup-contents/terms-and-conditions.html
+++ b/static/promo/common/popup-contents/terms-and-conditions.html
@@ -50,7 +50,7 @@
 <p class="normal">&nbsp;</p>
 
 <p class="normal">
-  <b>American Science CBD LTD</b>
+  <b>Yeah Keto LTD</b>
 </p>
 <p class="normal">&nbsp;</p>
 
@@ -268,7 +268,7 @@ We reserve the right, but undertake no obligation, to actively report and prosec
 <p class="normal">&nbsp;</p>
 
 <p class="sub-list">
-  (b) Trademarks. American Science CBD LTD is a trade name we own. The related design marks, and other trademarks on the Website are owned by us. Page headers, custom graphics, button icons and scripts are trademarks or trade dress we own. You may not use any of these trademarks, trade dress, or trade names without our express written permission.
+  (b) Trademarks. Yeah Keto LTD is a trade name we own. The related design marks, and other trademarks on the Website are owned by us. Page headers, custom graphics, button icons and scripts are trademarks or trade dress we own. You may not use any of these trademarks, trade dress, or trade names without our express written permission.
 </p>
 <p class="normal">&nbsp;</p>
 
