--- a/static/promo/desktop/checkout.html
+++ b/static/promo/desktop/checkout.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
   <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
-  <title>American Science CBD Hemp Oil</title>
+  <title>Yeah Keto Hemp Oil</title>
 
   <!-- libs -->
   <link rel="stylesheet" type="text/css" href="/assets/fonts/font-hind.css" />
@@ -337,7 +337,7 @@
         <script type="text/javascript">
           var year = new Date();
           document.write(year.getFullYear());
-        </script> © All Rights Reserved - American Science CBD LTD
+        </script> © All Rights Reserved - Yeah Keto LTD
       </p>
     </div>
   </div>
