--- a/static/promo/mobile/confirm.html
+++ b/static/promo/mobile/confirm.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
   <meta name="viewport" content="width=640, user-scalable=0">
   <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
-  <title>American Science CBD Hemp Oil</title>
+  <title>Yeah Keto Hemp Oil</title>
 
   <!-- lib -->
   <link rel="stylesheet" type="text/css" href="/assets/fonts/font-hind.css" />
@@ -346,7 +346,7 @@
             <br />
             <br />
             <span>
-              Copyright <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> © All Rights Reserved - American Science CBD LTD
+              Copyright <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> © All Rights Reserved - Yeah Keto LTD
             </span>
           </p>
         </div>
