--- a/static/promo/mobile/shipping.html
+++ b/static/promo/mobile/shipping.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="/images/favicon.ico?v=2" type="image/x-icon">
   <meta name="viewport" content="width=640, user-scalable=0">
   <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
-  <title>American Science CBD Hemp Oil</title>
+  <title>Yeah Keto Hemp Oil</title>
 
   <!-- lib -->
   <link rel="stylesheet" type="text/css" href="/assets/fonts/font-hind.css" />
@@ -38,7 +38,7 @@
   <div id="container">
     <div class="getheight">
       <div class="spng-hd">
-        <div class="spng-hd2"> <img src="images/ck-top.jpg" alt="American Science CBD" class="sping-logo" />
+        <div class="spng-hd2"> <img src="images/ck-top.jpg" alt="Yeah Keto" class="sping-logo" />
           <p class="clearall"></p>
           <p class="trial-toptxt1">VERIFY YOUR SHIPPING INFO</p>
         </div>
@@ -167,7 +167,7 @@
             </div>
             <div class="clearfix"></div>
             <div class="shpbtm">
-              <a class="button"> <img src="images/ship-btn.png" alt="American Science CBD" class="ship-btn pulse"> </a> <img src="images/loogs.png" alt="American Science CBD" class="loogs" />
+              <a class="button"> <img src="images/ship-btn.png" alt="Yeah Keto" class="ship-btn pulse"> </a> <img src="images/loogs.png" alt="Yeah Keto" class="loogs" />
             </div>
           </form>
         </div>
@@ -179,7 +179,7 @@
           <br />
           <br />
           <span>
-            Copyright <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> © All Rights Reserved - American Science CBD LTD
+            Copyright <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> © All Rights Reserved - Yeah Keto LTD
           </span>
         </p>
       </div>
