--- a/static/promo/mobile/thankyou.html
+++ b/static/promo/mobile/thankyou.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
   <meta name="viewport" content="width=640, user-scalable=0">
   <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
-  <title>American Science CBD Hemp Oil</title>
+  <title>Yeah Keto Hemp Oil</title>
 
   <link rel="stylesheet" type="text/css" href="/assets/fonts/font-hind.css" />
   <link rel="stylesheet" type="text/css" href="/assets/css/promo/mobile/index.css" />
@@ -61,7 +61,7 @@
           <div class="thnk-rgt package" data-productid="152">
             <div class="thnk-rgt1">
               <p class="txt1-tnk2">
-                5 American Science CBD Oil 100 mg<span class="b1 price">$195.00</span>
+                5 Yeah Keto Oil 100 mg<span class="b1 price">$195.00</span>
               </p>
               <p class="txt1-tnk2">
                 Shipping & Handling:<span style="padding: 0; color: #000;">$0.00</span>
@@ -72,7 +72,7 @@
           <div class="thnk-rgt package" data-productid="153">
             <div class="thnk-rgt1">
               <p class="txt1-tnk2">
-                3 American Science CBD Oil 100 mg<span class="b1 price">$147.00</span>
+                3 Yeah Keto Oil 100 mg<span class="b1 price">$147.00</span>
               </p>
               <p class="txt1-tnk2">
                 Shipping & Handling:<span style="padding: 0; color: #000;">$0.00</span>
@@ -83,7 +83,7 @@
           <div class="thnk-rgt package" data-productid="154">
             <div class="thnk-rgt1">
               <p class="txt1-tnk2">
-                <span class="qty" style="font-weight:400; float:left">1</span> American Science CBD Oil 100 mg<span class="b1 price">$69.00</span>
+                <span class="qty" style="font-weight:400; float:left">1</span> Yeah Keto Oil 100 mg<span class="b1 price">$69.00</span>
               </p>
               <p class="txt1-tnk2">
                 Shipping & Handling:<span style="padding: 0 0 0 0px; color: #000;">$0.00</span>
@@ -94,7 +94,7 @@
           <div class="thnk-rgt package" data-productid="155">
             <div class="thnk-rgt1">
               <p class="txt1-tnk2">
-                American Science CBD Hemp Capsules 100 mg<span class="b1 price">$77.00</span>
+                Yeah Keto Hemp Capsules 100 mg<span class="b1 price">$77.00</span>
               </p>
               <p class="txt1-tnk2">
                 Shipping & Handling:<span style="padding: 0 0 0 0px; color: #000;">$0.00</span>
@@ -116,7 +116,7 @@
           <div class="thnk-rgt package" data-productid="157">
             <div class="thnk-rgt1">
               <p class="txt1-tnk2">
-                <span class="qty" style="font-weight:400; float:left">1</span> American Science CBD Hemp Capsules 100 mg<span class="b1 price">$87.00</span>
+                <span class="qty" style="font-weight:400; float:left">1</span> Yeah Keto Hemp Capsules 100 mg<span class="b1 price">$87.00</span>
               </p>
               <p class="txt1-tnk2">
                 Shipping & Handling:<span style="padding: 0 0 0 0px; color: #000;">$0.00</span>
@@ -147,7 +147,7 @@
           <br />
           <br />
           <span>
-            Copyright <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> © All Rights Reserved - American Science CBD LTD
+            Copyright <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> © All Rights Reserved - Yeah Keto LTD
           </span>
         </p>
       </div>
