--- a/static/cbd333/index.html
+++ b/static/cbd333/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
 <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>American Science CBD Hemp Oil</title>
+<title>Yeah Keto Hemp Oil</title>
 <!-- libs -->
 <link rel="stylesheet" type="text/css" href="/assets/fonts/font-awesome.min.css"  />
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
@@ -60,13 +60,13 @@ $(document).ready(function(){
             	<h3>… WITHOUT The Dangers Of
                <br>
  <strong>Addictive Pharmaceutical Drugs?</strong></h3>
-                <h2>Then Discover The Healing Power of AMERICAN SCIENCE CBD Hemp Oil, The All-Natural Anti-Aging Cure.</h2>
+                <h2>Then Discover The Healing Power of Yeah Keto Hemp Oil, The All-Natural Anti-Aging Cure.</h2>
             </div>
         </div>
         <div class="row">
         	<div class="col-md-12">
             	<div class="hemp-oil-benefit">
-                	<p class="font_600 text-center">American Science CBD Hemp Oil Benefits At A Glance:</p>
+                	<p class="font_600 text-center">Yeah Keto Hemp Oil Benefits At A Glance:</p>
                     <ul>
                     <li>All-natural anti-aging solution.</li>
                     <li>Relieves stress.</li>
@@ -200,7 +200,7 @@ $(document).ready(function(){
   <section class="introducing-american">
   <div class="container">
   	<div class="row">
-    	<div class="col-md-12 intro_2"><h2>Introducing American Science CBD Hemp Oil:</h2></div>
+    	<div class="col-md-12 intro_2"><h2>Introducing Yeah Keto Hemp Oil:</h2></div>
     </div>
     <div class="row">
     	<div class="col-md-12">
@@ -375,7 +375,7 @@ $(document).ready(function(){
         <div class="row jacobson-text">
         	<div class="col-md-3"><img src="/assets/images/dr-jacobson.jpg" class="img-fluid"></div>
             <div class="col-md-9">
-            <p>The Cannabidiol used in American Science CBD Oil is 100% natural, sourced from real Cannabis leaves grown in the United States. This means that the quantity and concentration of CBD is standardized in every bottle, so you always know exactly what you’re getting. This is in stark contrast to other CBD products on the market, which come from questionable sources--and where you don’t even know if the product you’re buying contains real CBD.</p>
+            <p>The Cannabidiol used in Yeah Keto Oil is 100% natural, sourced from real Cannabis leaves grown in the United States. This means that the quantity and concentration of CBD is standardized in every bottle, so you always know exactly what you’re getting. This is in stark contrast to other CBD products on the market, which come from questionable sources--and where you don’t even know if the product you’re buying contains real CBD.</p>
             </div>
             <div class="col-md-12">
             <p>The quality of our CBD oil is so high that it has earned the approval of Dr. Jacobson, a medical doctor specializing in Homeopathic medicine. Citing its high purity and quality control, Jacobson has called it “one of the best anti-aging remedies I’ve ever seen.”</p>
@@ -525,7 +525,7 @@ $(document).ready(function(){
               <div class="row">
                 <div class="col-md-5">
                  <div class="fs_12">
-                  <p>© 2018 All Rights Reserved - American Science CBD</p>
+                  <p>© 2018 All Rights Reserved - Yeah Keto</p>
                   </div>
                 </div>
                 <div class="col-md-7">
@@ -538,8 +538,8 @@ $(document).ready(function(){
                 <div class="col-md-12">
                 <p class="ftr-txt fs_12">
                 <br>
-                <br> American Science CBD LTD
-                <br> * These statements have not been evaluated by the FDA. If you are pregnant, nursing, taking medications, or have a medical condition, consult your physician before using this product. Representations regarding the efficacy and safety of American Science CBD & American Science Nootripic Complex have not been evaluated by the Food and Drug Administration. The FDA only evaluates foods and drugs, not supplements like these products. These products are not intended to diagnose, prevent, treat, or cure any disease. <a href="https://www.ncbi.nlm.nih.gov/pubmed/18728714" target="_blank" class='legal-wiki-click'>CLICK HERE</a> to find evidence of a test, analysis, research, or study describing the benefits, performance or efficacy of American Science CBD  & American Science Nootripic Complex based on the expertise of relevant professionals.
+                <br> Yeah Keto LTD
+                <br> * These statements have not been evaluated by the FDA. If you are pregnant, nursing, taking medications, or have a medical condition, consult your physician before using this product. Representations regarding the efficacy and safety of Yeah Keto & American Science Nootripic Complex have not been evaluated by the Food and Drug Administration. The FDA only evaluates foods and drugs, not supplements like these products. These products are not intended to diagnose, prevent, treat, or cure any disease. <a href="https://www.ncbi.nlm.nih.gov/pubmed/18728714" target="_blank" class='legal-wiki-click'>CLICK HERE</a> to find evidence of a test, analysis, research, or study describing the benefits, performance or efficacy of Yeah Keto  & American Science Nootripic Complex based on the expertise of relevant professionals.
                 <br></p>
             </div>
       </div>
@@ -575,7 +575,7 @@ $(document).ready(function(){
               </svg>
             </span>
           </button>
-          <h3 class="modal-title" style="display:none">American Science CBD</h3>
+          <h3 class="modal-title" style="display:none">Yeah Keto</h3>
         </div>
         <div class="modal-body">
         </div>
