--- a/static/desktop/upsell-3.html
+++ b/static/desktop/upsell-3.html
@@ -23,7 +23,7 @@
         </div>
         <div class="sec1 dsplay">
         	<p class="s1hding">INTRODUCING OUR NEWEST PRODUCT</p>
-            <p class="s1txt6" style="padding:30px 0 0 0;"><span>American Science CBD Warming Rub</span><br />
+            <p class="s1txt6" style="padding:30px 0 0 0;"><span>Yeah Keto Warming Rub</span><br />
             with our proprietary blend of 10 all natural active ingredients</p>
             <p class="pkg-hding">Special introductory pricing reserved for our new customers only:</p>
             <div class="pkg-container dsplay">
@@ -114,7 +114,7 @@
             That’s why it’s so urgent that you assure yourself of an adequate supply. <br />
             Our special introductory pricing makes it easy.  
             </p>
-            <p class="s1txt6"><span>American Science CBD Warming Rub</span><br />
+            <p class="s1txt6"><span>Yeah Keto Warming Rub</span><br />
             with our proprietary blend of 10 all natural active ingredients</p>
             <p class="pkg-hding">Special introductory pricing reserved for our new customers only:</p>
             <div class="pkg-container dsplay">
