--- a/static/promo/common/popup-contents/privacy-policy.html
+++ b/static/promo/common/popup-contents/privacy-policy.html
@@ -49,12 +49,12 @@
 <p class="normal">&nbsp;</p>
 
 <p class="normal">
-  <b>American Science CBD LTD</b>
+  <b>Yeah Keto LTD</b>
 </p>
 <p class="normal">&nbsp;</p>
 
 <p class="normal">
-  This Privacy Policy governs your use of this Website and any content, products or services made available from or through this website including any sub domains thereof (“Website”). The Website is made available for American Science CBD LTD (Hereinafter referred to as “Company”). By visiting this Website and requesting information, products or services offered on or through this Website, you agree to the terms of this Privacy Policy, as they may be amended from time to time. As Company updates or expands its Website, services or products, this Privacy Policy may change and the changes are effective upon posting. Please check back frequently for updates as it is your sole responsibility to be aware of changes. Company does not provide notice of changes in any manner other than by posting the changes at this Website. This Privacy Policy is incorporated into, and part of, the Website Terms and Conditions which govern your use of this Website in general. This Website is intended for users who are located in the United States of America. The Privacy Policy shall be interpreted under the laws of the United States.
+  This Privacy Policy governs your use of this Website and any content, products or services made available from or through this website including any sub domains thereof (“Website”). The Website is made available for Yeah Keto LTD (Hereinafter referred to as “Company”). By visiting this Website and requesting information, products or services offered on or through this Website, you agree to the terms of this Privacy Policy, as they may be amended from time to time. As Company updates or expands its Website, services or products, this Privacy Policy may change and the changes are effective upon posting. Please check back frequently for updates as it is your sole responsibility to be aware of changes. Company does not provide notice of changes in any manner other than by posting the changes at this Website. This Privacy Policy is incorporated into, and part of, the Website Terms and Conditions which govern your use of this Website in general. This Website is intended for users who are located in the United States of America. The Privacy Policy shall be interpreted under the laws of the United States.
 </p>
 <p class="normal">&nbsp;</p>
 
