--- a/static/promo/common/popup-contents/refund-policy0.html
+++ b/static/promo/common/popup-contents/refund-policy0.html
@@ -85,8 +85,8 @@ If your return is accepted by Us, We will provide one of the following within a 
 <p class="normal">&nbsp;</p>
 
 <p class="list">
-  American Science CBD<br/>
-  Corporate: American Science CBD LTD<br/>
+  Yeah Keto<br/>
+  Corporate: Yeah Keto LTD<br/>
   Returns: PO Box 9005, Seal Beach, CA 90740-9005
 </p>
 <p class="normal">&nbsp;</p>
