--- a/static/promo/desktop/index.html
+++ b/static/promo/desktop/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
   <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
-  <title>American Science CBD Hemp Oil</title>
+  <title>Yeah Keto Hemp Oil</title>
 
   <!-- libs -->
   <link rel="stylesheet" type="text/css" href="/assets/fonts/font-hind.css" />
@@ -329,7 +329,7 @@
         </div>
         <!--<p class="s5-txt2 bdfont">"CBD (Hemp Extract) is emerging as one of the most powerful alternatives to prescription drugs. I am not backing down on CBD, I am doubling down on it."</p>-->
         <!--<p class="s5-txt3">- Dr. Sanjay Gupta,</p>-->
-        <!--<p class="s5-txt4"><img src="images/cnn.png" width="34" height="16" alt="American Science CBD" class="cnn" /> Chief Medical Correspondent</p>-->
+        <!--<p class="s5-txt4"><img src="images/cnn.png" width="34" height="16" alt="Yeah Keto" class="cnn" /> Chief Medical Correspondent</p>-->
 
         <i class="vdo-arw sprite5 sprite-vdo-arw"></i>
         <p class="limited-offer">HURRY! Limited Time Offer</p>
@@ -426,14 +426,14 @@
     <div class="container">
       <p class="ftr-txt"> <a href="#" class="popup-link" data-html="terms-and-conditions">Terms and Conditions </a>&nbsp;|&nbsp; <a href="#" class="popup-link" data-html="privacy-policy">Privacy Policy</a>&nbsp;|&nbsp; <a href="#" class="popup-link" data-html="customer-care"> Customer Care </a>
         <br>
-        <br> American Science CBD LTD
-        <br> * These statements have not been evaluated by the FDA. If you are pregnant, nursing, taking medications, or have a medical condition, consult your physician before using this product. Representations regarding the efficacy and safety of American Science CBD & American Science Nootripic Complex have not been evaluated by the Food and Drug Administration. The FDA only evaluates foods and drugs, not supplements like these products. These products are not intended to diagnose, prevent, treat, or cure any disease. <a href="https://www.ncbi.nlm.nih.gov/pubmed/18728714" target="_blank" class='legal-wiki-click'>CLICK HERE</a> to find evidence of a test, analysis, research, or study describing the benefits, performance or efficacy of American Science CBD  & American Science Nootripic Complex based on the expertise of relevant professionals.
+        <br> Yeah Keto LTD
+        <br> * These statements have not been evaluated by the FDA. If you are pregnant, nursing, taking medications, or have a medical condition, consult your physician before using this product. Representations regarding the efficacy and safety of Yeah Keto & American Science Nootripic Complex have not been evaluated by the Food and Drug Administration. The FDA only evaluates foods and drugs, not supplements like these products. These products are not intended to diagnose, prevent, treat, or cure any disease. <a href="https://www.ncbi.nlm.nih.gov/pubmed/18728714" target="_blank" class='legal-wiki-click'>CLICK HERE</a> to find evidence of a test, analysis, research, or study describing the benefits, performance or efficacy of Yeah Keto  & American Science Nootripic Complex based on the expertise of relevant professionals.
         <br>
         <br> Copyright
         <script type="text/javascript">
         var year = new Date();
         document.write(year.getFullYear());
-        </script> © All Rights Reserved - American Science CBD LTD</p>
+        </script> © All Rights Reserved - Yeah Keto LTD</p>
     </div>
   </div>
 
@@ -474,7 +474,7 @@
               </svg>
             </span>
           </button>
-          <h3 class="modal-title display-none">American Science CBD</h3>
+          <h3 class="modal-title display-none">Yeah Keto</h3>
         </div>
         <div class="modal-body">
         </div>
