--- a/static/promo/mobile/upsell-1.html
+++ b/static/promo/mobile/upsell-1.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="/images/favicon.ico?v=2" type="image/x-icon">
   <meta name="viewport" content="width=640, user-scalable=0">
   <meta name="description" content="Premium Quality Hemp Extract Products, Organic and Natural">
-  <title>American Science CBD Hemp Oil</title>
+  <title>Yeah Keto Hemp Oil</title>
 
   <link rel="stylesheet" type="text/css" href="/assets/fonts/font-hind.css" />
   <link rel="stylesheet" type="text/css" href="/assets/css/promo/mobile/index.css" />
@@ -27,7 +27,7 @@
   </script>
 </head>
 <body>
-  <!-- Offer Conversion: American Science CBD Straight Sale -->
+  <!-- Offer Conversion: Yeah Keto Straight Sale -->
   <iframe src="https://starlightgroup.go2cloud.org/aff_l?offer_id=1" scrolling="no" frameborder="0" width="1" height="1"></iframe>
   <!-- // End Offer Conversion -->
   <div id="container"> <a href="/"><img src="images/logo.png" alt="" class="logo" /></a>
@@ -87,7 +87,7 @@
           <br />
           <br />
           <span>
-            Copyright <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> © All Rights Reserved - American Science CBD LTD
+            Copyright <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> © All Rights Reserved - Yeah Keto LTD
           </span>
         </p>
       </div>
