--- a/static/warming_balm.html
+++ b/static/warming_balm.html
@@ -186,7 +186,7 @@
 <script type="text/javascript">
           var year = new Date();
           document.write(year.getFullYear());
-          </script> © All Rights Reserved - American Science CBD LTD
+          </script> © All Rights Reserved - Yeah Keto LTD
 </p>
 </div>
 </div>
